Add displaying the city to user_outside and add some functionality to views user_outside and user_inside

--- a/templates/user-outside.html
+++ b/templates/user-outside.html
@@ -49,7 +49,7 @@
                     </div>
                   <div class="input-group">
                     <span class="input-group-addon addon-org">Місто:</span>
-                    <div class="form-control about"><a>Місто А</a></div>
+                    <div class="form-control about"><a>{{city}}</a></div>
                    </div>
                    <div class="input-group">
                     <span class="input-group-addon addon-org">Адреса:</span>
