--- a/templates/404page.html
+++ b/templates/404page.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:font-family="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Не знайдено ¯\_(ツ)_/¯</title>
 </head>
 <body>
-<h1>Сторінки не існує, або вона знаходиться в розробці ¯\_(ツ)_/¯</h1>
+<h1 style="font-family: 'Trebuchet MS'; font-size: 400%">Сторінки не існує, або вона знаходиться в розробці ¯\_(ツ)_/¯</h1>
+<h1 style="font-size: 900%; position: absolute; bottom: 19%; left: 23%">Error 404</h1>>
 </body>
 </html>
